--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -46,8 +46,8 @@ main {
   background-color: transparent;
 }
 .form-control {
-  /* border-bottom-right-radius: 50px; */
-  /* border-top-right-radius: 50px; */
+  border-bottom-right-radius: 50px;
+  border-top-right-radius: 50px;
   transition: 0.5s ease-in-out;
 }
 .form-control:focus {
